Applied patch2 from bug #2243 for further testing.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25635 a95241bf-73f2-0310-859d-f6bbb57e9c96